# Certified-Budget-Boy

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  seeds.sql
Scripts/: budget_tracker.spec  build.sh  cron_runner.py  db_setup.py  run_cron.bat  setup_task_scheduler.bat
config/: settings.py
core/: cli_helpers.py  database.py  scheduler.py  utils.py
data/: schema_db.py  seeds.sql
features/: Dashoard.py  balance.py  charts.py  dashboard.py  export_reports.py  goals.py  insights.py  recurring.py  search.py
fintrack/: app.py  main.py
fintrack/core/: cli_helpers.py  database.py  scheduler.py  utils.py
fintrack/cron/: cron_runner.py
fintrack/data/: schema_db.py  seeds.sql
fintrack/features/: balance.py  charts.py  dashboard.py  export_reports.py  goals.py  insights.py  recurring.py  search.py
fintrack/models/: account_model.py  analytics_model.py  category_model.py  goal_model.py  transactions_model.py  user_model.py
fintrack/setup/: db_setup.py  scheduler_setup.py
models/: account_model.py  analytics_model.py  category_model.py  goal_model.py  tag_model.py  transactions_model.py  user_model.py
packaging/: budget_tracker.spec
tests/: test_account.py  test_analytics_model.py  test_balance.py  test_category_model.py  test_charts.py  test_dashboard.py  test_export.py  test_goals.py  test_insights.py  test_recurring.py  test_scheduler.py  test_search.py  test_transactions_model.py  test_user_model.py
